--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,29 +3,36 @@
     padding: 60px 0;
 }
 .container--footer{
-    display: flex;
+align-items: center;
     text-align: center;
     flex-direction: column;
         @include tablet {
-            flex-wrap: wrap;
-            flex-direction: row;
-            align-items: baseline;
+        
             
         }
         @include desktop{
             flex-wrap: nowrap;
             text-align: start;
                     display: flex;
-                    align-items: baseline;
+                    
                 
         }
+}
+.cont-soc-thumb{
+    @include tablet {
+    margin-bottom: 60px;
+    display: flex;
+    }
 }
 .contacts{
     margin-bottom: 60px;
     @include tablet {
         flex-basis: 50%;
+        margin-bottom: 0;
     }
-    @include desktop
+    @include desktop {
+        margin-bottom: 0;
+    }
 }
 .contacts__web-studio {
     font-family: 'Raleway';
@@ -85,8 +92,12 @@
 margin-bottom: 60px;
     @include tablet {
         flex-basis: 50%;
-        
-        
+        margin-bottom: 0;
+  
+    }
+    @include desktop {
+        margin-bottom: 0;
+        align-items: flex-start;
     }
     &__info {
             font-size: 14px;
@@ -123,19 +134,21 @@ margin-bottom: 60px;
 }
 
 .mailing {
-    margin: auto;
+
     @include tablet {
-        flex-direction: column;
-        text-align: center;
+        display: flex;
+    flex-wrap: wrap;
         width: 100%;
         flex-basis: 50%;
-        margin: auto;
+        
         
      
     }
         @include desktop{
             flex-basis: 100%;
-            margin: 0;
+           
+            margin-left: auto;
+                text-align: start;
             
         }
     &__info {
@@ -145,7 +158,7 @@ margin-bottom: 60px;
             font-weight: 700;
             color: var(--second-title-color);
             text-transform: uppercase;
-            margin-bottom: 20px;
+            
         }
 }
 
@@ -165,12 +178,14 @@ margin-bottom: 60px;
     transition-property: border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    margin-top: 20px;
     margin-bottom: 20px;
     @include mobile{
         width: 450px;
     }
     @include desktop {
         width: 358px;
+        margin-bottom: 0;
     }
 
      &::placeholder {
@@ -187,7 +202,10 @@ margin-bottom: 60px;
     justify-content: center;
     box-shadow: 0px 4px 4px var(--mailing-btn--color);
     padding: 10px 28px;
-    margin-left: 12px;
+    @include desktop {
+        margin-left: 12px;
+    }
+   
 }
 .mailing-form__btn-icon {
     fill: var(--second-title-color) ;
