--- a/css/main.css
+++ b/css/main.css
@@ -946,10 +946,8 @@ button {
 
 @media screen and (min-width: 768px) {
   .mailing {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
     flex-basis: 50%;
+    width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -966,6 +964,11 @@ button {
   font-weight: 700;
   color: var(--second-title-color);
   text-transform: uppercase;
+}
+
+.mailing-thumb {
+  display: flex;
+  flex-direction: column;
 }
 
 .mailing-form__input {
@@ -1012,6 +1015,7 @@ button {
   justify-content: center;
   box-shadow: 0px 4px 4px var(--mailing-btn--color);
   padding: 10px 28px;
+  margin-left: 12px;
 }
 @media screen and (min-width: 1200px) {
   .mailing-form__btn {
