--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -136,10 +136,9 @@ margin-bottom: 60px;
 .mailing {
 
     @include tablet {
-        display: flex;
-    flex-wrap: wrap;
+    flex-basis: 50%;
         width: 100%;
-        flex-basis: 50%;
+        
         
         
      
@@ -161,7 +160,11 @@ margin-bottom: 60px;
             
         }
 }
-
+.mailing-thumb{
+    display: flex;
+    flex-direction: column;
+   
+}
 .mailing-form__input {
     height: 50px;
     width: 300px;
@@ -202,6 +205,7 @@ margin-bottom: 60px;
     justify-content: center;
     box-shadow: 0px 4px 4px var(--mailing-btn--color);
     padding: 10px 28px;
+    margin-left: 12px;
     @include desktop {
         margin-left: 12px;
     }
