--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,7 +5,8 @@
 .container--footer{
 align-items: center;
     text-align: center;
-    flex-direction: column;
+margin-left: auto;
+margin-right: auto;
         @include tablet {
         
             
@@ -134,20 +135,13 @@ margin-bottom: 60px;
 }
 
 .mailing {
-
-    @include tablet {
-    flex-basis: 50%;
-        width: 100%;
-        
-        
-        
      
-    }
+    
         @include desktop{
-            flex-basis: 100%;
+           
            
             margin-left: auto;
-                text-align: start;
+                
             
         }
     &__info {
@@ -160,11 +154,7 @@ margin-bottom: 60px;
             
         }
 }
-.mailing-thumb{
-    display: flex;
-    flex-direction: column;
-   
-}
+
 .mailing-form__input {
     height: 50px;
     width: 300px;
@@ -205,7 +195,7 @@ margin-bottom: 60px;
     justify-content: center;
     box-shadow: 0px 4px 4px var(--mailing-btn--color);
     padding: 10px 28px;
-    margin-left: 12px;
+  
     @include desktop {
         margin-left: 12px;
     }
