--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,8 +3,7 @@
     padding: 60px 0;
 }
 .container--footer{
-align-items: center;
-    text-align: center;
+text-align: center;
 margin-left: auto;
 margin-right: auto;
         @include tablet {
@@ -12,7 +11,7 @@ margin-right: auto;
             
         }
         @include desktop{
-            flex-wrap: nowrap;
+            
             text-align: start;
                     display: flex;
                     
@@ -24,7 +23,12 @@ margin-right: auto;
     margin-bottom: 60px;
     display: flex;
     }
-}
+    @include desktop {
+         margin-bottom: 0;
+                display: flex;
+            }
+    }
+
 .contacts{
     margin-bottom: 60px;
     @include tablet {
@@ -33,6 +37,7 @@ margin-right: auto;
     }
     @include desktop {
         margin-bottom: 0;
+       
     }
 }
 .contacts__web-studio {
@@ -94,11 +99,13 @@ margin-bottom: 60px;
     @include tablet {
         flex-basis: 50%;
         margin-bottom: 0;
+        
   
     }
     @include desktop {
         margin-bottom: 0;
-        align-items: flex-start;
+        margin-left: 70px;
+       
     }
     &__info {
             font-size: 14px;
@@ -135,8 +142,7 @@ margin-bottom: 60px;
 }
 
 .mailing {
-     
-    
+        
         @include desktop{
            
            
