--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -22,7 +22,8 @@ margin-right: auto;
     @include tablet {
     margin-bottom: 60px;
     display: flex;
-    }
+justify-content: space-around;
+      }
     @include desktop {
          margin-bottom: 0;
                 display: flex;
@@ -37,6 +38,7 @@ margin-right: auto;
     }
     @include desktop {
         margin-bottom: 0;
+        flex-basis: 100%;
        
     }
 }
@@ -105,6 +107,7 @@ margin-bottom: 60px;
     @include desktop {
         margin-bottom: 0;
         margin-left: 70px;
+        flex-basis: 100%;
        
     }
     &__info {
@@ -142,15 +145,18 @@ margin-bottom: 60px;
 }
 
 .mailing {
+        @include tablet {
         
+           
+        
+            }
         @include desktop{
-           
-           
+                    
             margin-left: auto;
                 
-            
         }
     &__info {
+            display: block;
             font-size: 14px;
             line-height: 1.14;
             letter-spacing: 0.03em;
@@ -196,14 +202,15 @@ margin-bottom: 60px;
         }
 }
 .mailing-form__btn{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+        display: flex;
+            align-items: center;
+            justify-content: center;
     box-shadow: 0px 4px 4px var(--mailing-btn--color);
     padding: 10px 28px;
-  
+   margin: auto;
     @include desktop {
         margin-left: 12px;
+        display: inline-flex;
     }
    
 }
