--- a/sass/layout/_name.scss
+++ b/sass/layout/_name.scss
@@ -39,7 +39,8 @@
         @include desktop {
                      padding-top: 200px;
                      padding-bottom: 200px;
-                    max-width: 100%;
+                     width: 100%;
+                    max-width: 1600px;
                     height: 600px;
             background-image: linear-gradient(
                 var(--name--background--color),
